--- a/packages/icons-react/package.json
+++ b/packages/icons-react/package.json
@@ -30,7 +30,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
+    "@babel/generator": "^7.4.4",
     "@babel/preset-env": "^7.2.0",
+    "@babel/template": "^7.4.4",
+    "@babel/types": "^7.4.4",
     "@carbon/bundler": "10.2.0",
     "@carbon/cli-reporter": "10.2.0",
     "@carbon/icons": "10.2.0",
