--- a/packages/icons-react/package.json
+++ b/packages/icons-react/package.json
@@ -26,25 +26,32 @@
   },
   "dependencies": {
     "@carbon/icon-helpers": "10.2.0",
-    "prop-types": "^15.6.2"
+    "prop-types": "^15.6.2",
+    "rollup-plugin-replace": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
     "@babel/generator": "^7.4.4",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
     "@babel/template": "^7.4.4",
+    "@babel/traverse": "^7.4.5",
     "@babel/types": "^7.4.4",
     "@carbon/bundler": "10.2.0",
     "@carbon/cli-reporter": "10.2.0",
+    "@carbon/icon-helpers": "10.2.0",
     "@carbon/icons": "10.2.0",
+    "browserslist-config-carbon": "10.2.0",
     "change-case": "^3.0.2",
+    "core-js": "^3.1.2",
     "fs-extra": "^7.0.0",
     "prettier": "^1.17.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "rimraf": "^2.6.2",
-    "rollup": "^0.66.6",
-    "rollup-plugin-virtual": "^1.0.1"
+    "rollup": "^1.12.3",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-strip-banner": "^0.2.0"
   },
   "sideEffects": false
 }
