--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@carbon/cli": "10.5.0",
     "@commitlint/cli": "^7.5.2",
     "@commitlint/config-conventional": "^7.5.0",
-    "@types/fs-extra": "^8.0.0",
     "babel-jest": "^24.8.0",
     "cross-env": "^5.2.0",
     "cross-spawn": "^6.0.5",
@@ -60,8 +59,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "rimraf": "^2.6.3",
-    "stylelint": "^10.0.1",
-    "typescript": "^3.5.3"
+    "stylelint": "^10.0.1"
   },
   "husky": {
     "hooks": {
