--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -39,6 +39,8 @@
     "browserslist-config-carbon": "10.4.0",
     "carbon-components": "10.6.0",
     "css-loader": "^3.2.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "react": "^16.9.0",
