--- a/packages/type/package.json
+++ b/packages/type/package.json
@@ -32,7 +32,8 @@
     "access": "public"
   },
   "scripts": {
-    "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonType && carbon-cli sassdoc \"scss/**/*.scss\" -i \"**/{_inlined,vendor}**\" && carbon-cli inline && carbon-cli check \"scss/*.scss\"",
+    "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonType && carbon-cli sassdoc \"scss/**/*.scss\" -i \"**/{_inlined,vendor}**\" && carbon-cli inline && node tasks/build.js",
+    "ci-check": "carbon-cli check \"scss/*.scss\"",
     "clean": "rimraf css es lib umd scss/_inlined scss/vendor"
   },
   "dependencies": {
@@ -41,8 +42,10 @@
   },
   "devDependencies": {
     "@carbon/cli": "^10.18.0",
+    "@carbon/scss-generator": "^10.12.0",
     "@carbon/test-utils": "^10.14.0",
-    "change-case": "^4.1.1",
+    "change-case": "^4.1.2",
+    "fs-extra": "^9.1.0",
     "rimraf": "^3.0.0"
   },
   "eyeglass": {
