--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@carbon/styles",
+  "version": "0.0.0",
   "private": true,
   "description": "Styles used for the Carbon Design System",
   "license": "Apache-2.0",
