--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -85,10 +85,15 @@
     "@babel/preset-react": "^7.10.0",
     "@babel/runtime": "^7.10.0",
     "@carbon/cli": "^10.20.0",
-    "@carbon/elements": "^10.29.0",
+    "@carbon/colors": "^10.21.0",
+    "@carbon/grid": "^10.22.0",
     "@carbon/icons-handlebars": "^10.27.0",
     "@carbon/icons-react": "^10.27.0",
+    "@carbon/layout": "^10.20.0",
+    "@carbon/motion": "^10.14.0",
     "@carbon/test-utils": "^10.15.0",
+    "@carbon/themes": "^10.29.0",
+    "@carbon/type": "^10.23.0",
     "@frctl/fractal": "^1.1.0",
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-commonjs": "^17.0.0",
