--- a/explorer/package.json
+++ b/explorer/package.json
@@ -11,6 +11,8 @@
     "carbon-components": "^10.32.0",
     "carbon-components-react": "^7.32.0",
     "classnames": "^2.3.1",
+    "fast-glob": "^3.2.5",
+    "fs-extra": "^9.1.0",
     "next": "^10.1.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -18,6 +20,7 @@
     "sass": "^1.32.8"
   },
   "devDependencies": {
+    "babel-plugin-dev-expression": "^0.2.2",
     "rimraf": "^3.0.2"
   }
 }
