--- a/explorer/package.json
+++ b/explorer/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "@carbon/styles": "^0.3.0",
+    "@carbon/test-utils": "^10.15.0",
     "carbon-components": "^10.32.0",
     "carbon-components-react": "^7.32.0",
     "classnames": "^2.3.1",
+    "cssstats": "^4.0.2",
     "fast-glob": "^3.2.5",
     "fs-extra": "^9.1.0",
     "next": "^10.1.3",
